Fix closing castframes causing other frames to jump around
The frames drag container is now positioned absolutely to prevent this

--- a/src/styles/WindowArea.css
+++ b/src/styles/WindowArea.css
@@ -31,5 +31,5 @@ main {
 }
 
 .react-draggable {
-  display: inline-block;
+  position: absolute;
 }
